--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.7
 colorama==0.4.6
 dj-database-url==2.1.0
 Django==5.0.3
+django-allauth==0.62.1
 Flask==3.0.2
 gunicorn==22.0.0
 itsdangerous==2.1.2
